--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,13 @@
     <title>GIT VSCode</title>
 </head>
 <body>
-    
+    <!-- DIV CONTENEDOR 1 -->>
+    <div class="container">
+        <div class="row">
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, est!
+            </p>
+        </div>
+    </div>
 </body>
 </html>
