--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>GIT VSCode</title>
 </head>
 <body>
-    <!-- DIV CONTENEDOR 2 -->>
+    <!-- DIV CONTENEDOR 3 -->>
     <div class="container">
         <div class="row">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, est!
+                Modificado Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, est!
             </p>
         </div>
     </div>
